--- a/BigBasketProducts/Mappings/mappingBasic.csv.yml
+++ b/BigBasketProducts/Mappings/mappingBasic.csv.yml
@@ -16,9 +16,9 @@ sources:
 mappings:
   ProductName:
     sources: bigbasket
-    s: $(Absolute_Url)
+    s: bbpdt:salesProduct_$(Absolute_Url_idx)
     po:
-      - [a, bbp:sales_product]
+      - [a, bbp:SalesProduct]
       - [bbp:productName, $(ProductName), xsd:string]
       - [bbp:brandName, $(Brand), xsd:string]
       - [bbp:price, $(Price), xsd:double]
