--- a/Scripts/requirements.txt
+++ b/Scripts/requirements.txt
@@ -1,12 +1,12 @@
-pyyaml
+tensorflow-gpu==1.12
+graph-tool==2.29
+python-igraph
+pandas==0.24.2
+matching==0.1.1
+scikit-learn
 numpy
-pandas
-openai
-python-dotenv
-lxml
-rdflib
-morph-kgc
-sklearn
-sentence_transformers
-PyQt5
-markdown
+gensim==3.8.3
+python-Levenshtein
+scipy
+matplotlib
+ray
